--- a/_data/data.yml
+++ b/_data/data.yml
@@ -9,7 +9,7 @@ sidebar:
     # Profile information
     name: Adrian Calvetos
     tagline: Backend Developer
-    avatar: https://avatars.githubusercontent.com/u/29986450?s=460&u=9b86c6375213513d9576f64cdd8f05c08e76bfe7&v=4  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    ##avatar: https://avatars.githubusercontent.com/u/29986450?s=460&u=9b86c6375213513d9576f64cdd8f05c08e76bfe7&v=4  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: adriancalventosgarcia@gmail..com
