--- a/_data/data.yml
+++ b/_data/data.yml
@@ -41,7 +41,7 @@ sidebar:
 
 
 career-profile:
-    title: Career Profile
+    title: Perfil
     summary: |
       Summarise your career here lorem ipsum dolor sit amet, consectetuer
       adipiscing elit. You can [download this free resume/CV template here]().
