--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,7 +7,7 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Adrian Calvetos
+    name: Adrian Calvetos Garcia
     tagline: Backend Developer
     #avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
