--- a/_data/data.yml
+++ b/_data/data.yml
@@ -22,7 +22,7 @@ sidebar:
     #stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
 
-    languages:
+    Lenguajes:
       - idiom: Inglés
         level: Intermedio
 
