--- a/_data/data.yml
+++ b/_data/data.yml
@@ -71,32 +71,26 @@ education:
           - Android Developer
           - C
 experiences:
-    - role: Lead Developer
-      time: 2015 - Present
-      company: Startup Hubs, San Francisco
+    - role: Backend developer
+      time:  diciembre 2020 - Actual
+      company: 3Aside
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-        enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-        error sit voluptatem accusantium doloremque laudantium, totam rem
-        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-        architecto beatae vitae dicta sunt explicabo.
-          - Bullet point
-          - Bullet point
-    - role: Senior Software Engineer
+        Desarrollo de microservicios y sistemas medios para cliente final Caixa. Uso de arquitectura ABSIS con componentes en Java.
+          - Oracle SQL
+          - Java
+          - jsp
+    - role: Backend developer
       time: 2014 - 2015
       company: Google, London
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
+        Desarrollo de microservicios para un CRM del sector hipermercados. 
+          - Java
+          - Spring Boots
+          - Hibernate
+          - Sql Server
+          - Javascript / Typescript
+          - jQuery
+          - Seguimiento con Agile
     - role: UI Developer
       time: 2012 - 2014
       company: Amazon, London
