--- a/_data/data.yml
+++ b/_data/data.yml
@@ -80,55 +80,54 @@ experiences:
           - Java
           - jsp
     - role: Backend developer
-      time: 2018 - 2020
+      time: septiembre 2018 -  julio 2020
       company: Vincle
       details: |
-        Desarrollo de microservicios para un CRM del sector hipermercados. 
-          - Java
-          - Spring Boots
+        Desarrollo de microservicios para un CRM del sector hipermercados. Se realizaban tareas de mantenimiento de código, evolutivos y nuevas funcionalidades. Creación de componentes
+        siguiendo una documentación funcional y técnica. Redacción de manuales y wikis. Resolución de bugs. 
+          - Spring Boot
           - Hibernate
           - Sql Server
+          - Git
           - Javascript / Typescript
           - Angular
           - jQuery
           - Seguimiento con Agile
-    - role: UI Developer
-      time: 2012 - 2014
-      company: Amazon, London
+          - Redmine
+    - role: Practicas programación
+      time: octubre 2017 - marzo 2018
+      company: Binsa Software
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
+        Mantenimiento de código en C# y Android. Soporte técnico a clientes, subidas de nuevas versiones de software, redacción de manuales, retoque de impresos con
+        Crystal Reports. Maquetación con Windows Forms
+          - C#
+          - Android Studio
+          - Crystal Reports
+          - SQL Server
+          - Windows Forms
+
+
 projects:
-    title: Projects
+    title: Proyectos
     intro: >
-      You can list your side projects or open source libraries in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+      En este apartado listo algunos de mis proyectos. La mayoria son cursos de otros programadores, pruebas de concepto o proyectos de clase. 
     assignments:
       - title: Docker con API-Rest y CI/CD
         link: "https://github.com/adrianCalventos/dockerizeApiRest"
-        tagline: "Docker con una API-Rest con NodeJs para el Backend, BBDD MongoDB y react para el frontend"
+        tagline: "Docker con una API-Rest con NodeJs para el Backend, BBDD MongoDB y react para el frontend. Se desplegará con Heroku"
 
       - title: Blog en laravel
-        link: "#"
-        tagline: "Proyecto de PHP con framework laravel creado para "
+        link: "https://github.com/adrianCalventos/blog_laravel"
+        tagline: "Proyecto de PHP con framework laravel creado para clase. Esta organizado con estructura MVC y se presenta como un blog con login y posibilidad de crear nuevas entradas, editar y borrar."
 
       - title: API-Rest Sencilla
         link: "https://github.com/adrianCalventos/apiRest-with-node-express"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
+        tagline: "App de libros que consiste en una API-Rest con un endpoint en node y un"
 
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
+      - title: Aplicacion en Spring Boot
+        link: "https://github.com/adrianCalventos/spring-bookApiRest-"
+        tagline: "Aplicación API-Rest con mapeo en hibernate, repositories de Spring para obtener entidades, una entidad DTO que devolver a frontend con su casteo en el endpoint. "
 
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
 
 publications:
     title: Publications
