--- a/_data/data.yml
+++ b/_data/data.yml
@@ -39,7 +39,7 @@ sidebar:
       - item: literatura fantastica
         link:
       
-      - item: literatura fantastica
+      - item: dibujo
         link:
 
 
@@ -49,11 +49,12 @@ career-profile:
       Graudado en Ciencias Ambientales por la Universitat Autònoma de Barcelona y programador. Mi experiencia multidisciplinar en el ámbito del medio ambiente me 
       prepara para asumir puestos que requieran una visión transversal de una empresa u entidad en su relación con el medio ambiente.
       Mi experiencia como programador me permite asumir tareas de desarrollo de aplicaciones y servicios. 
+      |
       Tengo facilidad para entender los negocios que se ven involucrados en las soluciones que se van a aplicar y me adapto rapidamente a las tecnologias y metodologias aplicadas en mi puesto.
 education:
 
     - degree: Ingenieria Informática
-      university: Universitat Oberta de Cataluny
+      university: Universitat Oberta de Catalunya
       time: 2019 - Actual
       details: |
        Estudios compaginados con el desempeño de mi trabajo como programador. El objetivo de estos estudios es fortalecerme como programador, alcanzar puestos de mayor responsabilidad
