add language switch

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 title: Curriculum Vitae
 
 description: A beautiful Jekyll theme for creating resume
-
-languages: ["es", "en"]
+ 
+languages: ["en", "es"]
 
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: blue # blue turquoise green berry orange ceramic
