--- a/_data/data.yml
+++ b/_data/data.yml
@@ -46,7 +46,7 @@ sidebar:
 career-profile:
     title: Perfil
     summary:  |
-      Graduadoooo en Ciencias Ambientales por la Universitat Autònoma de Barcelona y programador. Mi experiencia multidisciplinar en el ámbito del medio ambiente me 
+      Graduado en Ciencias Ambientales por la Universitat Autònoma de Barcelona y programador. Mi experiencia multidisciplinar en el ámbito del medio ambiente me 
       prepara para asumir puestos que requieran una visión transversal de una empresa u entidad en su relación con el medio ambiente.
       Mi experiencia como programador me permite asumir tareas de desarrollo de aplicaciones y servicios. 
     
