--- a/_data/_i18n/es.yml
+++ b/_data/_i18n/es.yml
@@ -1,6 +1,9 @@
 #
 # Be aware that even a small syntax error here can lead to failures in output.
 #
+global:
+  english: Eng 
+  spanish: Esp
 
 sidebar:
     about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
