--- a/_data/data.yml
+++ b/_data/data.yml
@@ -47,7 +47,7 @@ sidebar:
 career-profile:
     title: Perfil
     summary:  |
-      Graduadoo en Ciencias Ambientales por la Universitat Autònoma de Barcelona y programador. Mi experiencia multidisciplinar en el ámbito del medio ambiente me 
+      Graduadoooo en Ciencias Ambientales por la Universitat Autònoma de Barcelona y programador. Mi experiencia multidisciplinar en el ámbito del medio ambiente me 
       prepara para asumir puestos que requieran una visión transversal de una empresa u entidad en su relación con el medio ambiente.
       Mi experiencia como programador me permite asumir tareas de desarrollo de aplicaciones y servicios. 
     
