add profile in english

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -45,13 +45,14 @@ sidebar:
 
 
 career-profile:
-    title: Perfil
+    title: Profile
     summary:  |
-      Graduado en Ciencias Ambientales por la Universitat Autònoma de Barcelona y programador. Mi experiencia multidisciplinar en el ámbito del medio ambiente me 
-      prepara para asumir puestos que requieran una visión transversal de una empresa u entidad en su relación con el medio ambiente.
-      Mi experiencia como programador me permite asumir tareas de desarrollo de aplicaciones y servicios. 
+      Graduated in Environmental Sciences by the Universitat Autònoma de Barcelona and programmer. My multidisciplinary experience in the environmental field prepares me to assume positions that require a cross-disciplinary 
+      prepared me to assume positions that require a transversal vision of a company or entity in its relationship with the environment.
+      My experience as a programmer allows me to assume tasks of development of applications and services. 
     
-      Tengo facilidad para entender los negocios que se ven involucrados en las soluciones que se van a aplicar y me adapto rapidamente a las tecnologias y metodologias aplicadas en mi puesto.
+      I am able to understand the business involved in the solutions to be applied and I adapt quickly to the technologies and methodologies applied in my position.
+
 education:
 
     - degree: Ingenieria Informática
