--- a/_data/data.yml
+++ b/_data/data.yml
@@ -133,7 +133,7 @@ experiences:
       company: Ayuntamiento de Sabadell
       details: |
         Labores de soporte a técnicos superiores, como modificación de planos en AutoCAD, el análisis de consumos energéticos del ayuntamiento a través del software de gestión
-        Gemweb, pruebas de iluminación con mediciones de lumens, supervisión en obras de renovación de iluminación y redacción de informes sobre ahorro en edicios públicos.
+        Gemweb, pruebas de iluminación con mediciones de lumens, supervisión en obras de renovación de iluminación y redacción de informes sobre ahorro en edificios públicos.
           - AutoCAD
           - Gemweb
 
